--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+tmp
+dist
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -13,3 +16,21 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+staticsite/
+
+
+.cache/
+coverage/
+dist/*
+!dist/index.html
+node_modules/
+*.log
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
